# RevEng-IDE

./: .gitignore  Cargo.toml  LICENSE  README.md  setup_tools_robust.ps1
src/: app.rs  main.rs
src/engine/: apk.rs  apkid.rs  apktool.rs  arsenal.rs  dex_stats.rs  diff.rs  jadx.rs  manifest.rs  mod.rs  navigation.rs  patch.rs  refactor.rs  signing.rs  smali_complete.rs  smali_opcodes.rs  smali_validator.rs  strings.rs  symbols.rs  toolchain.rs  workspace.rs  xref.rs
src/native/: disasm.rs  elf.rs  flutter_patch.rs  mod.rs
src/runtime/: adb.rs  frida.rs  frida_templates.rs  mod.rs
src/ui/: activity_bar.rs  command_palette.rs  editor.rs  file_tree.rs  layout.rs  mod.rs  native_view.rs  panels.rs  theme.rs  toolbar.rs
