[package]
name = "reveng-ide"
version = "0.1.0"
edition = "2021"
description = "A professional Android reverse-engineering IDE"
authors = ["Levython Technologies"]
license = "MIT"
repository = "https://github.com/Levython-Technologies/reveng-ide"

[dependencies]
# GUI
eframe = { version = "0.31", default-features = false, features = ["glow", "default_fonts", "accesskit"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["syntect", "image"] }

# Async & Parallelism
tokio = { version = "1", features = ["full"] }
rayon = "1.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# File system
walkdir = "2"
zip = "2"

# Regex
regex = "1"

# Binary analysis
goblin = "0.9"
capstone = "0.12"

# Logging
log = "0.4"
env_logger = "0.11"

# Syntax highlighting
syntect = "5"

# Misc
chrono = "0.4"
dirs = "6"
open = "5"
rfd = "0.15"
ureq = { version = "2", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
strip = true

[patch.crates-io]
eframe = { path = "vendor/eframe" }
